tests/e2e/mutation_any_invalid.story
a = [] to List[any]
b = a[0]
c = b.substring(foo:2)
